tests/error/mkCons-wrong-argument.uplc
(program 0.0.0 [[(force (builtin mkCons)) (con integer 0)] (con integer 0)])